[package]
name = "f5n_skills"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
reqwest = "0.11"

[lib]
path = "src/lib.rs"

[[bin]]
path ="src/main.rs"
name = "f5n_skills"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }